--- a/src/main/resources/templates/user-registration.html
+++ b/src/main/resources/templates/user-registration.html
@@ -1,45 +1,47 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 <head>
 	<meta charset="UTF-8" />
-	<title>Cadastro de Usuário</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+	<title>Anime Note - Cadastro de Usuário</title>
 </head>
 <body>
 	<form th:object="${user}" th:action="@{/user-registration}" method="post">
-		<div th:if="${#fields.hasAnyErrors()}">
-	        <div th:each="detailedError : ${#fields.detailedErrors()}">
-	            <span th:text="${detailedError.message}"></span>
-	        </div>
-	    </div>
 		<div>
 			<label for="name">Nome:</label>
-			<input type="text" th:field="*{name}" id="name" />
-			<span th:text="${#fields.hasErrors('name')}"></span>
-			
-			<span th:errors="*{name}"></span>
+			<input type="text" th:field="*{name}" id="name" maxlength="50" />
+			<span th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></span>
 		</div>
-		
+
 		<div>
 			<label for="email">E-mail:</label>
 			<input type="text" th:field="*{email}" id="email" />
 			<span th:text="${#fields.hasErrors('email')}"></span>
 			<span th:errors="*{email}"></span>
 		</div>
-		
+
 		<div>
 			<label for="password">Senha:</label>
-			<input type="text" th:field="*{password}" id="password" />
+			<input type="password" th:field="*{password}" id="password" />
 			<span th:text="${#fields.hasErrors('password')}"></span>
 			<span th:errors="*{password}"></span>
 		</div>
-		
+
 		<div>
-			<label for="passwordConfimation">Confirmação de senha:</label>
-			<input type="text" th:field="*{passwordConfimation}" id="passwordConfimation" />
-			<span th:text="${#fields.hasErrors('passwordConfimation')}"></span>
-			<span th:errors="*{passwordConfimation}"></span>
+			<label for="passwordConfirmation">Confirmação de senha:</label>
+			<input type="password" th:field="*{passwordConfirmation}" id="passwordConfirmation" />
+			<span th:text="${#fields.hasErrors('passwordConfirmation')}"></span>
+			<span th:errors="*{passwordConfirmation}"></span>
 		</div>
-		
+
+		<div>
+			<label for="status">Status:</label>
+			<input type="text" th:field="*{status}" id="status" />
+			<span th:text="${#fields.hasErrors('status')}"></span>
+			<span th:errors="*{status}"></span>
+		</div>
+
 		<button type="submit">Cadastrar</button>
 	</form>
 </body>
