Configuração spring security

--- a/src/main/resources/templates/administrator.html
+++ b/src/main/resources/templates/administrator.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Anime Note - Timeline</title>
+    <title>Anime Note - Administração</title>
 </head>
 <body>
-    <h1>Timeline do usuário.</h1>
+    <h1>Administração.</h1>
     <form th:action="@{/logout}" method="post">
 		<input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}" />
 		<button type="submit">Sair</button>
