--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -19,6 +19,8 @@
 			<label for="password">Senha:</label>
 			<input type="password" name="password" id="password" />
 		</div>
+		
+		<input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}" />
 
 		<button type="submit">Entrar</button>
 	</form>
