--- a/src/main/resources/templates/timeline.html
+++ b/src/main/resources/templates/timeline.html
@@ -16,7 +16,7 @@
 	
 	<span th:text="${user.name}"></span>
 	
-	<img th:if="${user?.avatar}" th:src="@{/images/uploads/} + ${user.avatar}" th:alt="${user.name}" />
+	<img th:if="${user?.avatar}" th:src="${avatar}" th:alt="${user.name}" />
 	
 	<a th:href="@{/atualizar-avatar}">Atualizar Avatar</a>
 </body>
