--- a/src/main/resources/templates/confirm-account-success.html
+++ b/src/main/resources/templates/confirm-account-success.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Sua conta foi confirmada com sucesso!</h1>
     <p>
-    	<a href="/login">Faça seu login para aproveitar.</a>
+    	<a href="/">Comece a aproveitar.</a>
     </p>
 </body>
 </html>
