--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -24,5 +24,8 @@
 
 		<button type="submit">Entrar</button>
 	</form>
+	<a href="/esqueci-minha-senha">Esqueci minha senha</a>
+	<br />
+	<a href="/cadastro">Novo por aqui? Faça seu cadastro aqui!</a>
 </body>
 </html>
