--- a/src/main/resources/templates/confirm-account-error.html
+++ b/src/main/resources/templates/confirm-account-error.html
@@ -1,11 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Anime Note - Confirmação de Conta</title>
-</head>
+<head th:replace="fragments/fragments :: head (title = 'Confirmação de conta')"></head>
 <body>
     <h1>Conta não existente.</h1>
 </body>
