--- a/src/main/resources/templates/forgot-password-email.html
+++ b/src/main/resources/templates/forgot-password-email.html
@@ -1,11 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-<title>Anime Note - Recuperação de Senha</title>
-</head>
+<head th:replace="fragments/fragments :: head (title = 'Recuperação de Senha')"></head>
 <body>
 	<h1>
 		Olá, <span th:text="${name}"></span>!
