--- a/src/main/resources/templates/administrator.html
+++ b/src/main/resources/templates/administrator.html
@@ -1,11 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Anime Note - Administração</title>
-</head>
+<head th:replace="fragments/fragments :: head (title = 'Administração')"></head>
 <body>
     <h1>Administração.</h1>
     <form th:action="@{/logout}" method="post">
