--- a/src/main/resources/templates/avatar-upload.html
+++ b/src/main/resources/templates/avatar-upload.html
@@ -1,11 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-	<title>Anime Note - Atualizar avatar</title>
-</head>
+<head th:replace="fragments/fragments :: head (title = 'Atualizar avatar')"></head>
 <body>
 	<form th:action="@{/atualizar-avatar}" method="post" enctype="multipart/form-data">
 		<span th:text="${error}"></span>
