--- a/src/main/resources/templates/change-password.html
+++ b/src/main/resources/templates/change-password.html
@@ -1,11 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-	<title>Anime Note - Aterar Senha</title>
-</head>
+<head th:replace="fragments/fragments :: head (title = 'Alterar senha')"></head>
 <body>
 	<form th:action="@{/alterar-senha}" method="post">
 		<span th:text="${error}"></span>
