--- a/src/main/resources/templates/my-informations.html
+++ b/src/main/resources/templates/my-informations.html
@@ -1,11 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-	<title>Anime Note - Atualizar dados de Usuário</title>
-</head>
+<head th:replace="fragments/fragments :: head (title = 'Atualizar dados de usuário')"></head>
 <body>
 	<form th:object="${user}" th:action="@{/minhas-informacoes}" method="post">
 		<div>
