--- a/src/main/resources/templates/timeline.html
+++ b/src/main/resources/templates/timeline.html
@@ -1,13 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Anime Note - Timeline</title>
-    
-    <link th:href="@{/css/test.css}" rel="stylesheet" />
-</head>
+<head th:replace="fragments/fragments :: head (title = 'Timeline')"></head>
 <body>
     <h1>Timeline do usuário.</h1>
     <form th:action="@{/logout}" method="post">
