Cadastro de anime

--- a/src/main/resources/templates/account-confirmation-email.html
+++ b/src/main/resources/templates/account-confirmation-email.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head th:replace="fragments/fragments :: head (title = 'E-mail de confirmação de conta')"></head>
+<head></head>
 <body>
 	<h1>Seja bem vindo, <span th:text="${name}"></span>!</h1>
 	<p>Agora você só precisa confirmar seu e-mail clicando no link abaixo:</p>
