--- a/src/main/resources/templates/forgot-password-email.html
+++ b/src/main/resources/templates/forgot-password-email.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head th:replace="fragments/fragments :: head (title = 'Recuperação de Senha')"></head>
+<head></head>
 <body>
 	<h1>
 		Olá, <span th:text="${name}"></span>!
