Configuração do fragment footer

--- a/src/main/resources/templates/confirm-account-success.html
+++ b/src/main/resources/templates/confirm-account-success.html
@@ -6,5 +6,7 @@
     <p>
     	<a href="/">Comece a aproveitar.</a>
     </p>
+    
+    <footer th:replace="fragments/fragments :: footer"></footer>
 </body>
 </html>
