--- a/src/main/resources/templates/forgot-my-password.html
+++ b/src/main/resources/templates/forgot-my-password.html
@@ -13,5 +13,7 @@
 		<button type="submit">Enviar</button>
 	</form>
 	<a href="/login">Fazer Login</a>
+	
+	<footer th:replace="fragments/fragments :: footer"></footer>
 </body>
 </html>
