--- a/src/main/resources/templates/fragments/fragments.html
+++ b/src/main/resources/templates/fragments/fragments.html
@@ -8,5 +8,14 @@
 	
 	<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
 </head>
-<body></body>
+<body>
+	<footer th:fragment="footer">
+		<script src="@{/js/jquery.min.js}"></script>
+		<script src="@{/js/jquery.autocomplete.min.js}"></script>
+		<script src="@{/js/bootstrap.min.js}"></script>
+		<script src="@{/js/jquery.validate.min.js}"></script>
+		<script src="@{/js/messages_pt_BR.min.js}"></script>
+		<script src="@{/js/formValidateSettings.js}"></script>
+	</footer>
+</body>
 </html>
