--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -22,5 +22,7 @@
 	<a href="/esqueci-minha-senha">Esqueci minha senha</a>
 	<br />
 	<a href="/cadastro">Novo por aqui? Faça seu cadastro aqui!</a>
+	
+	<footer th:replace="fragments/fragments :: footer"></footer>
 </body>
 </html>
