--- a/src/main/resources/templates/my-informations.html
+++ b/src/main/resources/templates/my-informations.html
@@ -34,5 +34,7 @@
 
 		<button type="submit">Atualizar</button>
 	</form>
+	
+	<footer th:replace="fragments/fragments :: footer"></footer>
 </body>
 </html>
