--- a/src/main/resources/templates/registered-animes.html
+++ b/src/main/resources/templates/registered-animes.html
@@ -2,5 +2,7 @@
 <html lang="pt-BR">
 <head th:replace="fragments/fragments :: head (title = 'Animes Cadastrados')"></head>
 <body>
+	
+	<footer th:replace="fragments/fragments :: footer"></footer>
 </body>
 </html>
