--- a/src/main/resources/templates/user-registration.html
+++ b/src/main/resources/templates/user-registration.html
@@ -35,5 +35,7 @@
 
 		<button type="submit">Cadastrar</button>
 	</form>
+	
+	<footer th:replace="fragments/fragments :: footer"></footer>
 </body>
 </html>
