--- a/src/main/resources/templates/anime-registration.html
+++ b/src/main/resources/templates/anime-registration.html
@@ -69,5 +69,7 @@
 		
 		<button type="submit">Cadastrar</button>
 	</form>
+	
+	<footer th:replace="fragments/fragments :: footer"></footer>
 </body>
 </html>
