--- a/src/main/resources/templates/change-password.html
+++ b/src/main/resources/templates/change-password.html
@@ -22,5 +22,7 @@
 
 		<button type="submit">Alterar</button>
 	</form>
+	
+	<footer th:replace="fragments/fragments :: footer"></footer>
 </body>
 </html>
