--- a/src/main/resources/templates/confirm-account-error.html
+++ b/src/main/resources/templates/confirm-account-error.html
@@ -3,5 +3,7 @@
 <head th:replace="fragments/fragments :: head (title = 'Confirmação de conta')"></head>
 <body>
     <h1>Conta não existente.</h1>
+    
+    <footer th:replace="fragments/fragments :: footer"></footer>
 </body>
 </html>
