Desenvolvimento de interface

--- a/src/main/resources/templates/change-password.html
+++ b/src/main/resources/templates/change-password.html
@@ -2,27 +2,38 @@
 <html lang="pt-BR">
 <head th:replace="fragments/fragments :: head (title = 'Alterar senha')"></head>
 <body>
-	<form th:action="@{/alterar-senha}" method="post">
-		<span th:text="${error}"></span>
-		<span th:text="${success}"></span>
-		<div>
-			<label for="password">Senha:</label>
-			<input type="password" name="password" id="password" />
-		</div>
-		
-		<div>
-			<label for="new-password">Nova senha:</label>
-			<input type="password" name="newPassword" id="new-password" />
-		</div>
+	<header th:replace="fragments/fragments :: internalHeader"></header>
 
-		<div>
-			<label for="new-password-confirmation">Confirmação de nova senha:</label>
-			<input type="password" name="newPasswordConfirmation" id="new-password-confirmation" />
-		</div>
+	<main>
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-12 col-sm-6 col-md-4 col-sm-offset-3 col-md-offset-4">
+					<form th:action="@{/alterar-senha}" method="post">
+						<div class="alert alert-danger" th:if="${error}" th:text="${error}"></div>
+						<div class="alert alert-info" th:if="${message}" th:text="${message}"></div>
 
-		<button type="submit">Alterar</button>
-	</form>
-	
+						<div class="form-group">
+							<label for="password">Senha:</label>
+							<input type="password" name="password" id="password" class="form-control" placeholder="senha" />
+						</div>
+
+						<div class="form-group">
+							<label for="new-password">Nova senha:</label>
+							<input type="password" name="newPassword" id="new-password" class="form-control" placeholder="nova senha" />
+						</div>
+
+						<div class="form-group">
+							<label for="new-password-confirmation">Confirmação de nova senha:</label>
+							<input type="password" name="newPasswordConfirmation" id="new-password-confirmation" class="form-control" placeholder="confirmação de nova senha" />
+						</div>
+
+						<button type="submit" class="btn btn-block btn-primary">Alterar</button>
+					</form>
+				</div>
+			</div>
+		</div>
+	</main>
+
 	<footer th:replace="fragments/fragments :: footer"></footer>
 </body>
 </html>
