--- a/src/main/resources/templates/anime-registration.html
+++ b/src/main/resources/templates/anime-registration.html
@@ -2,74 +2,76 @@
 <html>
 <head th:replace="fragments/fragments :: head (title = 'Cadastro de anime')"></head>
 <body>
-	<form th:object="${anime}" th:action="@{/cadastrar-anime}" method="post" enctype="multipart/form-data">
-		<div>
-			<label for="name">Nome:</label>
-			<input type="text" th:field="*{name}" id="name" />
-			<span th:text="${#fields.hasErrors('name')}"></span>
-			
-			<span th:errors="*{name}"></span>
-		</div>
-		
-		<div>
-			<label for="anime-image">Imagem:</label>
-			<input type="file" name="animeImage" id="anime-image" />
-			<span th:text="${error}"></span>
-		</div>
-		
-		<!-- <div>
-			<label for="anime-creator">Criador:</label>
-			<input type="text" th:field="*{animeCreator}" id="anime-creator" />
-			<span th:text="${#fields.hasErrors('animeCreator')}"></span>
-			<span th:errors="*{animeCreator}"></span>
-		</div> -->
-		
-		<ul>
-			<li th:each="animeCreator : ${animeCreators}">
-				<input type="radio"  th:id="${animeCreator.id}" th:field="*{animeCreator}" th:value="${animeCreator.id}"/>
-				<label th:for="${animeCreator.id}" th:text="${animeCreator.name}"></label>
-			</li>
-			<li>
-				<span th:text="${#fields.hasErrors('animeCategories')}"></span>
-				<span th:errors="*{animeCategories}"></span>
-			</li>
-		</ul>
-		
-		<div>
-			<label for="release-year">Ano de Lançamento:</label>
-			<input type="text" th:field="*{releaseYear}" id="release-year" />
-			<span th:text="${#fields.hasErrors('releaseYear')}"></span>
-			<span th:errors="*{releaseYear}"></span>
-		</div>
-		
-		<div>
-			<label for="episode-numbers">Número de Episódios:</label>
-			<input type="text" th:field="*{episodeNumbers}" id="episode-numbers" />
-			<span th:text="${#fields.hasErrors('episodeNumbers')}"></span>
-			<span th:errors="*{episodeNumbers}"></span>
-		</div>
-		
-		<div>
-			<label for="resume">Sinopse:</label>
-			<textarea th:field="*{resume}" id="resume"></textarea>
-			<span th:text="${#fields.hasErrors('resume')}"></span>
-			<span th:errors="*{resume}"></span>
-		</div>
+	<header th:replace="fragments/fragments :: internalHeader"></header>
 
-		<ul>
-			<li th:each="animeCategory : ${animeCategories}">
-				<input type="checkbox"  th:id="${animeCategory.id}" th:field="*{animeCategories}" th:value="${animeCategory.id}"/>
-				<label th:for="${animeCategory.id}" th:text="${animeCategory.category}"></label>
-			</li>
-			<li>
-				<span th:text="${#fields.hasErrors('animeCategories')}"></span>
-				<span th:errors="*{animeCategories}"></span>
-			</li>
-		</ul>
-		
-		<button type="submit">Cadastrar</button>
-	</form>
-	
+	<main>
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-12 col-sm-6 col-md-4 col-sm-offset-3 col-md-offset-4">
+					<form th:object="${anime}" th:action="@{/cadastrar-anime}" method="post" enctype="multipart/form-data">
+						<div class="form-group" th:classappend="${#fields.hasErrors('name')} ? has-error : ''">
+							<label for="name">Nome:</label>
+							<input type="text" th:field="*{name}" id="name" class="form-control" />
+							<span th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="help-block"></span>
+						</div>
+
+						<div class="form-group" th:classappend="${error} ? has-error : ''">
+							<label for="anime-image">Imagem:</label>
+							<input type="file" name="animeImage" id="anime-image" class="form-control" />
+							<span th:if="${error}" th:text="${error}" class="help-block"></span>
+						</div>
+
+						<div class="form-group" th:classappend="${#fields.hasErrors('releaseYear')} ? has-error : ''">
+							<label for="release-year">Ano de Lançamento:</label>
+							<input type="text" th:field="*{releaseYear}" id="release-year" class="form-control" />
+							<span th:if="${#fields.hasErrors('releaseYear')}" th:errors="*{releaseYear}" class="help-block"></span>
+						</div>
+
+						<div class="form-group" th:classappend="${#fields.hasErrors('episodeNumbers')} ? has-error : ''">
+							<label for="episode-numbers">Número de Episódios:</label>
+							<input type="text" th:field="*{episodeNumbers}" id="episode-numbers" class="form-control" />
+							<span th:if="${#fields.hasErrors('episodeNumbers')}" th:errors="*{episodeNumbers}" class="help-block"></span>
+						</div>
+
+						<div class="form-group" th:classappend="${#fields.hasErrors('resume')} ? has-error : ''">
+							<label for="resume">Sinopse:</label>
+							<textarea th:field="*{resume}" id="resume" class="form-control"></textarea>
+							<span th:if="${#fields.hasErrors('resume')}" th:errors="*{resume}" class="help-block"></span>
+						</div>
+
+						<div class="form-group" th:classappend="${#fields.hasErrors('animeCreator')} ? has-error : ''">
+							<label>Criador:</label>
+							<ul class="list-unstyled">
+								<li th:each="animeCreator : ${animeCreators}">
+									<input type="radio"  th:id="${animeCreator.id}" th:field="*{animeCreator}" th:value="${animeCreator.id}"/>
+									<label th:for="${animeCreator.id}" th:text="${animeCreator.name}"></label>
+								</li>
+								<li th:if="${#fields.hasErrors('animeCategories')}">
+									<span th:errors="{*animeCategories}" class="help-block"></span>
+								</li>
+							</ul>
+						</div>
+
+						<div class="form-group" th:classappend="${#fields.hasErrors('animeCategories')} ? has-error : ''">
+							<label>Categoria:</label>
+							<ul class="list-unstyled">
+								<li th:each="animeCategory : ${animeCategories}">
+									<input type="checkbox"  th:id="${animeCategory.id}" th:field="*{animeCategories}" th:value="${animeCategory.id}"/>
+									<label th:for="${animeCategory.id}" th:text="${animeCategory.category}"></label>
+								</li>
+								<li th:if="${#fields.hasErrors('animeCategories')}">
+									<span th:errors="*{animeCategories}" class="help-block"></span>
+								</li>
+							</ul>
+						</div>
+
+						<button type="submit" class="btn btn-block btn-primary">Cadastrar</button>
+					</form>
+				</div>
+			</div>
+		</div>
+	</main>
+
 	<footer th:replace="fragments/fragments :: footer"></footer>
 </body>
 </html>
