--- a/src/main/resources/templates/forgot-my-password.html
+++ b/src/main/resources/templates/forgot-my-password.html
@@ -2,18 +2,28 @@
 <html lang="pt-BR">
 <head th:replace="fragments/fragments :: head (title = 'Esqueci minha senha')"></head>
 <body>
-	<form th:action="@{/esqueci-minha-senha}" method="post">
-		<span th:text="${error}"></span>
-		<span th:text="${message}"></span>
-		<div>
-			<label for="email">E-mail:</label>
-			<input type="text" name="email" id="email" maxlength="50" />
-		</div>
+	<main>
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-12 col-sm-6 col-md-4 col-sm-offset-3 col-md-offset-4">
+					<form th:action="@{/esqueci-minha-senha}" method="post">
+						<div class="alert alert-danger" th:if="${error}" th:text="${error}"></div>
+						<div class="alert alert-info" th:if="${message}" th:text="${message}"></div>
 
-		<button type="submit">Enviar</button>
-	</form>
-	<a href="/login">Fazer Login</a>
-	
+						<div class="form-group">
+							<label for="email">E-mail:</label>
+							<input type="text" name="email" id="email" maxlength="50" class="form-control" placeholder="e-mail" />
+						</div>
+
+						<button type="submit" class="btn btn-block btn-primary">Enviar</button>
+					</form>
+					<hr />
+					<a href="/login" class="btn btn-block btn-success">Fazer login</a>
+				</div>
+			</div>
+		</div>
+	</main>
+
 	<footer th:replace="fragments/fragments :: footer"></footer>
 </body>
 </html>
