--- a/src/main/resources/templates/fragments/fragments.html
+++ b/src/main/resources/templates/fragments/fragments.html
@@ -5,17 +5,74 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 	<title th:text="${'Anime Note - ' + title}"></title>
-	
+
 	<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
+	<link rel="stylesheet" th:href="@{/css/style.css}" />
 </head>
 <body>
+	<header th:fragment="internalHeader">
+		<nav class="navbar navbar-default">
+			<div class="container">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<a class="navbar-brand" href="/">Logo</a>
+				</div>
+
+				<div class="collapse navbar-collapse" id="navbar-collapse">
+					<ul class="nav navbar-nav">
+						<li class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Opções de Usuário <span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li>
+									<a href="/cadastrar-anime">Cadastrar Anime</a>
+								</li>
+								<li>
+									<a href="/minhas-informacoes">Minhas Informações</a>
+								</li>
+								<li>
+									<a href="/alterar-senha">Alterar Senha</a>
+								</li>
+								<li>
+
+								</li>
+							</ul>
+						</li>
+					</ul>
+					
+					<form class="navbar-form navbar-left">
+						<div class="form-group">
+							<input type="text" class="form-control" placeholder="busca" />
+						</div>
+						<div class="form-group">
+							<select class="form-control">
+								<option value="">Animes</option>
+								<option value="">Pessoas</option>
+							</select>
+						</div>
+						<button type="submit" class="btn btn-default">Buscar</button>
+					</form>
+
+					<form th:action="@{/logout}" method="post" class="navbar-form navbar-right">
+						<button type="submit" class="btn btn-default">Sair</button>
+					</form>
+				</div>
+			</div>
+		</nav>
+	</header>
+
 	<footer th:fragment="footer">
-		<script src="@{/js/jquery.min.js}"></script>
-		<script src="@{/js/jquery.autocomplete.min.js}"></script>
-		<script src="@{/js/bootstrap.min.js}"></script>
-		<script src="@{/js/jquery.validate.min.js}"></script>
-		<script src="@{/js/messages_pt_BR.min.js}"></script>
-		<script src="@{/js/formValidateSettings.js}"></script>
+		<script th:src="@{/js/jquery.min.js}"></script>
+		<script th:src="@{/js/jquery.autocomplete.min.js}"></script>
+		<script th:src="@{/js/bootstrap.min.js}"></script>
+		<script th:src="@{/js/jquery.validate.min.js}"></script>
+		<script th:src="@{/js/messages_pt_BR.min.js}"></script>
+		<script th:src="@{/js/formValidateSettings.js}"></script>
+
+		<div class="text-center">Anime Note - 2017</div>
 	</footer>
 </body>
 </html>
