--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,27 +2,34 @@
 <html lang="pt-BR">
 <head th:replace="fragments/fragments :: head (title = 'Login')"></head>
 <body>
-	<form th:action="@{/login}" method="post">
-		<span th:text="${error}"></span>
-		<span th:text="${message}"></span>
-		<div>
-			<label for="username">Usuário:</label>
-			<input type="text" name="username" id="username" maxlength="50" />
-		</div>
+	<main>
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-12 col-sm-6 col-md-4 col-sm-offset-3 col-md-offset-4">
+					<form th:action="@{/login}" method="post">
+						<div class="alert alert-danger" th:if="${error}" th:text="${error}"></div>
+						<div class="alert alert-info" th:if="${message}" th:text="${message}"></div>
 
-		<div>
-			<label for="password">Senha:</label>
-			<input type="password" name="password" id="password" />
-		</div>
-		
-		<input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}" />
+						<div class="form-group">
+							<label for="username">Usuário:</label>
+							<input type="text" name="username" id="username" class="form-control" placeholder="usuário" maxlength="50" />
+						</div>
 
-		<button type="submit">Entrar</button>
-	</form>
-	<a href="/esqueci-minha-senha">Esqueci minha senha</a>
-	<br />
-	<a href="/cadastro">Novo por aqui? Faça seu cadastro aqui!</a>
-	
+						<div class="form-group">
+							<label for="password">Senha:</label>
+							<input type="password" name="password" id="password" class="form-control" placeholder="senha" />
+						</div>
+
+						<button type="submit" class="btn btn-block btn-primary">Entrar</button>
+					</form>
+					<a href="/esqueci-minha-senha" class="pull-right">Esqueci minha senha</a>
+					<hr />
+					<a href="/cadastro" class="btn btn-block btn-success">Novo por aqui? Faça seu cadastro aqui!</a>
+				</div>
+			</div>
+		</div>
+	</main>
+
 	<footer th:replace="fragments/fragments :: footer"></footer>
 </body>
 </html>
