--- a/src/main/resources/templates/user-registration.html
+++ b/src/main/resources/templates/user-registration.html
@@ -2,40 +2,50 @@
 <html lang="pt-BR">
 <head th:replace="fragments/fragments :: head (title = 'Cadastro de Usuário')"></head>
 <body>
-	<form th:object="${user}" th:action="@{/cadastro}" method="post">
-		<div>
-			<label for="name">Nome:</label>
-			<input type="text" th:field="*{name}" id="name" maxlength="50" />
-			<span th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></span>
-		</div>
+	<main>
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-12 col-sm-6 col-md-4 col-sm-offset-3 col-md-offset-4">
+					<form th:object="${user}" th:action="@{/cadastro}" method="post">
+						<div class="form-group" th:classappend="${#fields.hasErrors('name')} ? has-error : ''">
+							<label for="name">Nome:</label>
+							<input type="text" th:field="*{name}" id="name" maxlength="50" class="form-control" placeholder="nome" />
+							<span th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="help-block"></span>
+						</div>
 
-		<div>
-			<label for="email">E-mail:</label>
-			<input type="text" th:field="*{email}" id="email" />
-			<span th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></span>
-		</div>
-		
-		<div>
-			<label for="username">Usuário:</label>
-			<input type="text" th:field="*{username}" id="username" maxlength="50" />
-			<span th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></span>
-		</div>
+						<div class="form-group" th:classappend="${#fields.hasErrors('email')} ? has-error : ''">
+							<label for="email">E-mail:</label>
+							<input type="text" th:field="*{email}" id="email" class="form-control" placeholder="e-mail" />
+							<span th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="help-block"></span>
+						</div>
 
-		<div>
-			<label for="password">Senha:</label>
-			<input type="password" th:field="*{password}" id="password" />
-			<span th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></span>
-		</div>
+						<div class="form-group" th:classappend="${#fields.hasErrors('username')} ? has-error : ''">
+							<label for="username">Usuário:</label>
+							<input type="text" th:field="*{username}" id="username" maxlength="50" class="form-control" placeholder="usuário" />
+							<span th:if="${#fields.hasErrors('username')}" th:errors="*{username}" class="help-block"></span>
+						</div>
 
-		<div>
-			<label for="password-confirmation">Confirmação de senha:</label>
-			<input type="password" th:field="*{passwordConfirmation}" id="password-confirmation" />
-			<span th:if="${#fields.hasErrors('passwordConfirmation')}" th:errors="*{passwordConfirmation}"></span>
-		</div>
+						<div class="form-group" th:classappend="${#fields.hasErrors('password')} ? has-error : ''">
+							<label for="password">Senha:</label>
+							<input type="password" th:field="*{password}" id="password" class="form-control" placeholder="senha" />
+							<span th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="help-block"></span>
+						</div>
 
-		<button type="submit">Cadastrar</button>
-	</form>
-	
+						<div class="form-group" th:classappend="${#fields.hasErrors('passwordConfirmation')} ? has-error : ''">
+							<label for="password-confirmation">Confirmação de senha:</label>
+							<input type="password" th:field="*{passwordConfirmation}" id="password-confirmation" class="form-control" placeholder="confirme sua senha" />
+							<span th:if="${#fields.hasErrors('passwordConfirmation')}" th:errors="*{passwordConfirmation}" class="help-block"></span>
+						</div>
+
+						<button type="submit" class="btn btn-block btn-primary">Cadastrar</button>
+					</form>
+					<hr />
+					<a href="/login" class="btn btn-block btn-success">Fazer login</a>
+				</div>
+			</div>
+		</div>
+	</main>
+
 	<footer th:replace="fragments/fragments :: footer"></footer>
 </body>
 </html>
