--- a/src/main/resources/templates/change-password.html
+++ b/src/main/resources/templates/change-password.html
@@ -13,17 +13,17 @@
 						<div class="alert alert-info" th:if="${message}" th:text="${message}"></div>
 
 						<div class="form-group">
-							<label for="password">Senha:</label>
+							<label for="password">Senha: <abbr title="Campo Obrigatório">*</abbr></label>
 							<input type="password" name="password" id="password" class="form-control" placeholder="senha" />
 						</div>
 
 						<div class="form-group">
-							<label for="new-password">Nova senha:</label>
+							<label for="new-password">Nova senha: <abbr title="Campo Obrigatório">*</abbr></label>
 							<input type="password" name="newPassword" id="new-password" class="form-control" placeholder="nova senha" />
 						</div>
 
 						<div class="form-group">
-							<label for="new-password-confirmation">Confirmação de nova senha:</label>
+							<label for="new-password-confirmation">Confirmação de nova senha: <abbr title="Campo Obrigatório">*</abbr></label>
 							<input type="password" name="newPasswordConfirmation" id="new-password-confirmation" class="form-control" placeholder="confirmação de nova senha" />
 						</div>
 
