--- a/src/main/resources/templates/user-registration.html
+++ b/src/main/resources/templates/user-registration.html
@@ -2,6 +2,8 @@
 <html lang="pt-BR">
 <head th:replace="fragments/fragments :: head (title = 'Cadastro de Usuário')"></head>
 <body>
+	<header th:replace="fragments/fragments :: externalHeader"></header>
+	
 	<main>
 		<div class="container">
 			<div class="row">
