--- a/src/main/resources/templates/fragments/fragments.html
+++ b/src/main/resources/templates/fragments/fragments.html
@@ -19,7 +19,9 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="/">Logo</a>
+					<a href="/">
+						<img th:src="@{/images/logo-bar.png}" alt="Anime Note" />
+					</a>
 				</div>
 
 				<div class="collapse navbar-collapse" id="navbar-collapse">
@@ -34,6 +36,9 @@
 									<a href="/minhas-informacoes">Minhas Informações</a>
 								</li>
 								<li>
+									<a href="/atualizar-avatar">Atualizar Avatar</a>
+								</li>
+								<li>
 									<a href="/alterar-senha">Alterar Senha</a>
 								</li>
 								<li>
@@ -42,7 +47,7 @@
 							</ul>
 						</li>
 					</ul>
-					
+
 					<form class="navbar-form navbar-left">
 						<div class="form-group">
 							<input type="text" class="form-control" placeholder="busca" />
@@ -62,6 +67,20 @@
 				</div>
 			</div>
 		</nav>
+	</header>
+
+	<header th:fragment="externalHeader">
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-12 col-sm-6 col-md-4 col-sm-offset-3 col-md-offset-4">
+					<h1>
+						<a href="/">
+							<img th:src="@{/images/logo.png}" alt="Anime Note" class="img-responsive" />
+						</a>
+					</h1>
+				</div>
+			</div>
+		</div>
 	</header>
 
 	<footer th:fragment="footer">
