--- a/src/main/resources/templates/my-informations.html
+++ b/src/main/resources/templates/my-informations.html
@@ -3,26 +3,26 @@
 <head th:replace="fragments/fragments :: head (title = 'Atualizar dados de usuário')"></head>
 <body>
 	<header th:replace="fragments/fragments :: internalHeader"></header>
-	
+
 	<main>
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-4 col-sm-offset-3 col-md-offset-4">
 					<form th:object="${user}" th:action="@{/minhas-informacoes}" method="post">
 						<div class="form-group" th:classappend="${#fields.hasErrors('name')} ? has-error : ''">
-							<label for="name">Nome:</label>
+							<label for="name">Nome: <abbr title="Campo Obrigatório">*</abbr></label>
 							<input type="text" th:field="*{name}" id="name" class="form-control" placeholder="nome" maxlength="50" />
 							<span th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></span>
 						</div>
 
 						<div class="form-group" th:classappend="${#fields.hasErrors('username')} ? has-error : ''">
-							<label for="username">Usuário:</label>
+							<label for="username">Usuário: <abbr title="Campo Obrigatório">*</abbr></label>
 							<input type="text" th:field="*{username}" id="username" class="form-control" placeholder="usuário" maxlength="50" />
 							<span th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></span>
 						</div>
 
 						<div class="form-group" th:classappend="${#fields.hasErrors('email')} ? has-error : ''">
-							<label for="email">E-mail:</label>
+							<label for="email">E-mail: <abbr title="Campo Obrigatório">*</abbr></label>
 							<input type="text" th:field="*{email}" id="email" class="form-control" placeholder="e-mail" />
 							<span th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></span>
 						</div>
