--- a/src/main/resources/templates/forgot-password-email.html
+++ b/src/main/resources/templates/forgot-password-email.html
@@ -6,7 +6,7 @@
 		Olá, <span th:text="${name}"></span>!
 	</h1>
 	<p>
-		Para seu usuário <span th:text="${username}"></span> foi gerada uma nova senha: <strong th:text="${password}"></strong>. Esta senha foi gerada de forma automática, por isso, faça a alteração na próxima vez que entrar.
+		Para seu usuário <strong th:text="${username}"></strong> foi gerada uma nova senha: <strong th:text="${password}"></strong>. Esta senha foi gerada de forma automática, por isso, faça a alteração na próxima vez que entrar.
 	</p>
 	<p>
 		<a th:href="${'http://' + host + '/login'}">Faça seu login!</a>
