--- a/src/main/resources/templates/registered-animes.html
+++ b/src/main/resources/templates/registered-animes.html
@@ -2,7 +2,8 @@
 <html lang="pt-BR">
 <head th:replace="fragments/fragments :: head (title = 'Animes Cadastrados')"></head>
 <body>
-	
+	<header th:replace="fragments/fragments :: internalHeader"></header>
+
 	<footer th:replace="fragments/fragments :: footer"></footer>
 </body>
 </html>
