--- a/src/main/resources/templates/avatar-upload.html
+++ b/src/main/resources/templates/avatar-upload.html
@@ -3,14 +3,14 @@
 <head th:replace="fragments/fragments :: head (title = 'Atualizar avatar')"></head>
 <body>
 	<header th:replace="fragments/fragments :: internalHeader"></header>
-
+	
 	<main>
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-4 col-sm-offset-3 col-md-offset-4">
 					<form th:action="@{/atualizar-avatar}" method="post" enctype="multipart/form-data">
-						<div class="alert alert-danger" th:if="${error}" th:text="${error}"></div>
-						<div class="alert alert-success" th:if="${success}" th:text="${success}"></div>
+						<div class="alert alert-danger text-center" th:if="${error}" th:text="${error}"></div>
+						<div class="alert alert-success text-center" th:if="${success}" th:text="${success}"></div>
 
 						<div class="form-group">
 							<label for="avatar">Avatar:</label>
