--- a/src/main/resources/templates/forgot-my-password.html
+++ b/src/main/resources/templates/forgot-my-password.html
@@ -1,26 +1,30 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head th:replace="fragments/fragments :: head (title = 'Esqueci minha senha')"></head>
-<body>
+<body id="forgot-my-password" class="background-full">
 	<header th:replace="fragments/fragments :: externalHeader"></header>
-	
+
 	<main>
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-4 col-sm-offset-3 col-md-offset-4">
-					<form th:action="@{/esqueci-minha-senha}" method="post">
-						<div class="alert alert-danger" th:if="${error}" th:text="${error}"></div>
-						<div class="alert alert-info" th:if="${message}" th:text="${message}"></div>
+					<div class="panel panel-default">
+						<div class="panel-body">
+							<form th:action="@{/esqueci-minha-senha}" method="post">
+								<div class="alert alert-danger text-center" th:if="${error}" th:text="${error}"></div>
+								<div class="alert alert-info text-center" th:if="${success}" th:text="${success}"></div>
 
-						<div class="form-group">
-							<label for="email">E-mail:</label>
-							<input type="text" name="email" id="email" maxlength="50" class="form-control" placeholder="e-mail" />
+								<div class="form-group">
+									<label for="email">E-mail:</label>
+									<input type="text" name="email" id="email" maxlength="50" class="form-control" placeholder="e-mail" />
+								</div>
+
+								<button type="submit" class="btn btn-block btn-primary">Enviar</button>
+							</form>
+							<hr />
+							<a href="/login" class="btn btn-block btn-success">Fazer login</a>
 						</div>
-
-						<button type="submit" class="btn btn-block btn-primary">Enviar</button>
-					</form>
-					<hr />
-					<a href="/login" class="btn btn-block btn-success">Fazer login</a>
+					</div>
 				</div>
 			</div>
 		</div>
