--- a/src/main/resources/templates/fragments/fragments.html
+++ b/src/main/resources/templates/fragments/fragments.html
@@ -27,7 +27,7 @@
 				<div class="collapse navbar-collapse" id="navbar-collapse">
 					<ul class="nav navbar-nav">
 						<li class="dropdown">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Opções de Usuário <span class="caret"></span></a>
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Configurações <span class="caret"></span></a>
 							<ul class="dropdown-menu">
 								<li>
 									<a href="/cadastrar-anime">Cadastrar Anime</a>
@@ -74,8 +74,8 @@
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-4 col-sm-offset-3 col-md-offset-4">
 					<h1>
-						<a href="/">
-							<img th:src="@{/images/logo.png}" alt="Anime Note" class="img-responsive" />
+						<a href="/" class="center-block">
+							<img th:src="@{/images/logo.png}" alt="Anime Note" class="img-responsive center-block" />
 						</a>
 					</h1>
 				</div>
