--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,32 +1,36 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head th:replace="fragments/fragments :: head (title = 'Login')"></head>
-<body>
+<body id="login" class="background-full">
 	<header th:replace="fragments/fragments :: externalHeader"></header>
 
 	<main>
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-4 col-sm-offset-3 col-md-offset-4">
-					<form th:action="@{/login}" method="post">
-						<div class="alert alert-danger" th:if="${error}" th:text="${error}"></div>
-						<div class="alert alert-info" th:if="${message}" th:text="${message}"></div>
+					<div class="panel panel-default">
+						<div class="panel-body">
+							<form th:action="@{/login}" method="post">
+								<div class="alert alert-danger text-center" th:if="${error}" th:text="${error}"></div>
+								<div class="alert alert-info text-center" th:if="${message}" th:text="${message}"></div>
 
-						<div class="form-group">
-							<label for="username">Usuário:</label>
-							<input type="text" name="username" id="username" class="form-control" placeholder="usuário" maxlength="50" />
+								<div class="form-group">
+									<label for="username">Usuário:</label>
+									<input type="text" name="username" id="username" class="form-control" placeholder="usuário" maxlength="50" />
+								</div>
+
+								<div class="form-group">
+									<label for="password">Senha:</label>
+									<input type="password" name="password" id="password" class="form-control" placeholder="senha" />
+								</div>
+
+								<button type="submit" class="btn btn-block btn-primary">Entrar</button>
+							</form>
+							<a href="/esqueci-minha-senha" class="pull-right">Esqueci minha senha</a>
+							<hr />
+							<a href="/cadastro" class="btn btn-block btn-success">Novo por aqui? Faça seu cadastro aqui!</a>
 						</div>
-
-						<div class="form-group">
-							<label for="password">Senha:</label>
-							<input type="password" name="password" id="password" class="form-control" placeholder="senha" />
-						</div>
-
-						<button type="submit" class="btn btn-block btn-primary">Entrar</button>
-					</form>
-					<a href="/esqueci-minha-senha" class="pull-right">Esqueci minha senha</a>
-					<hr />
-					<a href="/cadastro" class="btn btn-block btn-success">Novo por aqui? Faça seu cadastro aqui!</a>
+					</div>
 				</div>
 			</div>
 		</div>
