Página de postagem

--- a/src/main/resources/templates/fragments/fragments.html
+++ b/src/main/resources/templates/fragments/fragments.html
@@ -7,6 +7,7 @@
 	<title th:text="${'Anime Note - ' + title}"></title>
 
 	<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
+	<link rel="stylesheet" th:href="@{/css/summernote.css}" />
 	<link rel="stylesheet" th:href="@{/css/style.css}" />
 </head>
 <body>
@@ -90,6 +91,9 @@
 		<script th:src="@{/js/jquery.validate.min.js}"></script>
 		<script th:src="@{/js/messages_pt_BR.min.js}"></script>
 		<script th:src="@{/js/formValidateSettings.js}"></script>
+		<script th:src="@{/js/summernote.min.js}"></script>
+		<script th:src="@{/js/summernote-pt-BR.js}"></script>
+		<script th:src="@{/js/animenote.js}"></script>
 
 		<div class="text-center">Anime Note - 2017</div>
 	</footer>
