--- a/src/main/resources/templates/post-registration.html
+++ b/src/main/resources/templates/post-registration.html
@@ -3,7 +3,7 @@
 <head th:replace="fragments/fragments :: head (title = 'Postagem')"></head>
 <body>
 	<header th:replace="fragments/fragments :: internalHeader"></header>
-	
+
 	<main>
 		<div class="container">
 			<div class="row">
@@ -13,7 +13,8 @@
 							<form th:object="${userPost}" th:action="@{/postagem}" method="post">
 								<div class="alert alert-danger text-center" th:if="${error}" th:text="${error}"></div>
 								<div class="alert alert-success text-center" th:if="${success}" th:text="${success}"></div>
-						
+
+								<input type="hidden" th:if="*{id}" th:field="*{id}" />
 								<div class="form-group" th:classappend="${#fields.hasErrors('post')} ? has-error : ''">
 									<label for="post">Postagem:</label>
 									<textarea th:field="*{post}" id="post" class="form-control" placeholder="Postagem" />
